name: haskid
version: 0.1
synopsis: Implementation of Hashids (hashids.org)
description: Confer the project's Github page for usage notes.
license: Apache-2.0
license-file: LICENSE
author: bryant
maintainer: bryant@defrag.in
category: Data, Digest
build-type: Custom
cabal-version: >=1.10

library
    build-depends:       base >=4.7 && <4.8, vector
    default-language:    Haskell2010
    hs-source-dirs: src
    exposed-modules: Data.HaskID
    ghc-options: -O3 -Wall

flag bench
    description: Build the benchmarking suite.
    default: False

executable benchmarks
    if flag(bench)
        buildable: True
    else
        buildable: False
    build-depends: base, haskid, criterion
    main-is: Main.hs

    default-language: Haskell2010
    ghc-options: -O3 -Wall

    hs-source-dirs: bench
    ld-options: bench/hashidsffi.o bench/hashidsxx/hashids.o -lstdc++

test-suite haskid-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: TestMain.hs

    build-depends:
        base >= 4 && < 5,
        haskid,
        tasty,
        tasty-quickcheck,
        tasty-hunit

    default-language: Haskell2010
